--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
+    id 'io.franzbecker.gradle-lombok' version '4.0.0'
 }
+apply plugin: 'com.android.application'
+apply plugin: 'dagger.hilt.android.plugin'
+
 
 android {
     compileSdkVersion 30
@@ -33,7 +37,24 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.navigation:navigation-fragment:2.2.2'
+    implementation 'androidx.navigation:navigation-ui:2.2.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //HILT
+    implementation 'com.google.dagger:hilt-android:2.35.1'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.35.1'
+
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.35.1'
+    androidTestAnnotationProcessor 'com.google.dagger:hilt-compiler:2.35.1'
+
+    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    testAnnotationProcessor 'com.google.dagger:hilt-compiler:2.35.1'
+
+    //Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
 }
