--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         jcenter()
         mavenCentral()
 
+        ext.hilt_version = '2.35'
+
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
