--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Runebound3Coin">
         <activity
-            android:name=".gameFlow.heroSetup.HeroSetupActivity"
+            android:name=".gameFlow.heroSetup.players.HeroSetupActivity"
             android:label="@string/title_activity_hero_setup"
             android:theme="@style/Theme.Runebound3Coin.NoActionBar"></activity>
         <activity android:name=".gameFlow.MainActivity">
