--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.Runebound3Coin">
         <activity android:name=".gameFlow.heroSetup.heroSelection.HeroSelectionActivity"></activity>
         <activity
-            android:name=".gameFlow.heroSetup.players.HeroSetupActivity"
+            android:name=".gameFlow.heroSetup.players.PlayerSetupActivity"
             android:label="@string/title_activity_hero_setup"
             android:theme="@style/Theme.Runebound3Coin.NoActionBar" />
         <activity android:name=".gameFlow.MainActivity">
